MIscore progression evaluation
Added full analysis on MIscore progression with DSP and correlation with different interest scores, plus the extent of interaction identification problems.

--- a/dsp_evaluation_pairs/dsp_evaluation_pairs.Rmd
+++ b/dsp_evaluation_pairs/dsp_evaluation_pairs.Rmd
@@ -24,7 +24,7 @@ library(scales)
 
 #### Data upload
 ```{r upload}
-# These come from the Google spreadsheet. 
+# These come from the Google spreadsheet, manually downloaded. 
 eval_dsp <- fread("./source_data/20190114_evaluated_dsp.txt",
                   header = T,
                   colClasses = "character",
